Made it runnable with Java 21